# aumos-fidelity-validator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/validator_calibration/: run_calibration.py
src/aumos_fidelity_validator/: __init__.py  main.py  settings.py
src/aumos_fidelity_validator/adapters/: __init__.py  anonymeter_evaluator.py  audio_metrics.py  audio_validator.py  healthcare_metrics.py  image_metrics.py  image_validator.py  regulatory_reports.py  report_generator.py  sdmetrics_evaluator.py  statistical_tests.py  tabular_metrics.py  text_metrics.py  video_metrics.py  video_validator.py
src/aumos_fidelity_validator/api/: __init__.py  router.py  schemas.py
src/aumos_fidelity_validator/core/: __init__.py  interfaces.py  models.py  services.py
